# common_pkg

./: CMakeLists.txt  README.md  package.xml
action/: CamLift.action  CamLift.action~  ObjRec.action  SpeechRec.action  SpeechRec.action~  SpeechSyn.action  SpeechSyn.action~
include/common_pkg/: common_function.h  common_function.h~  common_include.h  common_include.h~
launch/: ar_tracker.launch  common.launch~  dy_servo_cam.launch~  dy_servo_mic.launch~  exia.launch~  exia_iarm.launch~  iarm.launch  iarm.launch~  mapodom.launch~  rviz_map.launch  scan.launch~  sensor.launch~  servo_lift.launch  servo_lift.launch~  slam.launch  slam.launch~  sound_effect.launch  sound_effect.launch~  speech_syn.launch~  tf.launch  tf.launch~  zed_followme.launch  zed_followme.launch~
launch/servo/: dy_servo_cam.launch  dy_servo_cam.launch~  dy_servo_mic.launch  dy_servo_mic.launch~
params/: DServoXPan.yaml~  DServoXTilt.yaml~  dy_servo_cam_pan.yaml~  dy_servo_cam_tilt.yaml~  dy_servo_mic_pan.yaml~  dy_servo_mic_tilt.yaml~
params/move_base/: base_local_planner_params.yaml  base_local_planner_params.yaml~  costmap_common_params.yaml  costmap_common_params.yaml~  global_costmap_params.yaml  global_costmap_params.yaml~  local_costmap_params.yaml~  move_base_params.yaml~
params/servo/: dy_servo_mic_pan.yaml  dy_servo_mic_tilt.yaml
rviz_cfg/: map.rviz
scripts/: Img_MemoWaiter.py~  VoiceSyn.py~  approach_obj.py~  approach_table.py~  cam_lift.py~  common_function.py~  common_import.py~  common_param.py~  detect_and_approach_human.py~  detect_and_approach_person.py~  detect_obstacle_human.py~  exia_controller.py~  generate_map_base_link_tf.py~  iarm_controller.py~  load_scan_tf.py~  obj_tf.py~  speech_syn.py~  test.py~  test1.py~  test2.py~  test_cam_lift.py~
scripts/cam_lift/: cam_lift.py  cam_lift.py~  test_cam_lift.py~
scripts/common/: common_function.py  common_function.py~  common_import.py  common_import.py~  common_param.py  common_param.py~
scripts/exia/: elecom_pad.py  elecom_pad.py~  exia_controller.py  exia_controller.py~
scripts/iarm/: iarm_1.py~  iarm_close.py  iarm_close.py~  iarm_controller.py  iarm_controller.py~  iarm_grasp.py  iarm_hand.py  iarm_hand.py~  iarm_open.py  iarm_open.py~  iarm_visual_feedback.py~
scripts/img/: approach_table.py~  detect_obstacle_human.py~  img_obj_rec.py~
scripts/img/kinyoSakaba/: _img_obj_rec.py  img_obj_rec.py~  obj_rec.py~
scripts/img/kinyoSakaba/learned_beer/: const.prototxt
scripts/img/learn50000/: img_obj_rec.py  img_obj_rec.py~  obj_rec.py~
scripts/img/learnfruit/: _img_obj_rec.py  obj_rec.py~
scripts/img/learnfruit/learned_160324_googlenet_fruit/: const.prototxt
scripts/img/shallow_CNN/: _img_obj_rec.py  img_obj_rec.py~  obj_rec.py~
scripts/img/shallow_CNN/160616_3CNN2MLP/: mean.binaryproto
scripts/img/shallow_CNN_HOG/: _img_obj_rec.py  img_obj_rec.py~  obj_rec.py~
scripts/img/shallow_CNN_HOG/160616_HOG_3CNN2MLP/groupA/: const.prototxt~  createdb.sh~  mean.binaryproto  solver.prototxt~  test.txt~  train_test.prototxt~
scripts/img/shallow_CNN_HOG/160616_HOG_3CNN2MLP/groupB/: const.prototxt  const.prototxt~  mean.binaryproto  test.txt~  train.txt~  train_test.prototxt~
scripts/img/shallow_CNN_HOG/160616_HOG_3CNN2MLP/groupC/: const.prototxt  const.prototxt~  mean.binaryproto  solver.prototxt~  test.txt~  train_test.prototxt~
scripts/img/shallow_CNN_HOG/160616_HOG_3CNN2MLP/groupD/: const.prototxt  const.prototxt~  mean.binaryproto  solver.prototxt~  test.txt~  train.txt~  train_test.prototxt~
scripts/map/: generate_map_base_link_tf.py  load_scan_tf.py  load_scan_tf.py~  map_load_scan_tf.py~
scripts/openni_tracker/: detect_approach_parson.py  detect_approach_parson.py~  detect_approach_wave_hand.py  detect_approach_wave_hand.py~  detect_person.py  detect_person.py~
scripts/scan/: marge_scan.py  marge_scan.py~
scripts/scan_depth/: approach_obj.py  approach_obj.py~
scripts/scan_lrf/: detect_dooropen.py  detect_dooropen.py~
scripts/se/: se.py~  sound_effect.py  sound_effect.py~
scripts/servo/: dy_servo_cam_ctrl.py  dy_servo_cam_ctrl.py~  dy_servo_mic_ctrl.py  dy_servo_mic_ctrl.py~
scripts/slam/: approach_table.py~  generate_map_base_link_tf.py~  load_map.py~  load_scan_tf.py~  marge_scan.py~  slam_goto.py  slam_goto.py~
scripts/speech_rec/: speech_rec.py
scripts/speech_syn/: speech_syn.py  speech_syn.py~
src/common/: common_function.cpp  common_function.cpp~
src/img/: img_followparson.cpp  img_obj_cnt.cpp  img_obj_cnt.cpp~  img_obj_count.cpp~  img_obj_counter.cpp~  img_obj_detect.cpp  img_obj_detect.cpp~  img_obj_proc.cpp  img_obj_proc.cpp~  img_obj_proc_final.cpp  img_obj_proc_final.cpp~
